// Copyright 2022 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.analysis.v1;

option go_package = "go.chromium.org/luci/analysis/proto/v1;analysispb";

message Project {

    // The resource name of the project which can be used to access the project.
    // Format: projects/{project}.
    // See also https://google.aip.dev/122.
    string name = 1;

    // The display name to be used in the project selection page of LUCI Analysis.
    // If not provided, the Title case of the project's Luci project ID will be used.
    string display_name = 2;

    // The project id in luci, e.g. "chromium".
    string project = 3;
}